# Lolzteam-Keeper

./: .dockerignore  .env.example  .gitignore  Dockerfile  contests.example.json  docker-compose.yml  main.py  pyproject.toml
config/: __init__.py  settings.py
models/: __init__.py  contest.py
scheduler/: task_scheduler.py
services/: __init__.py  api_client.py  contest_service.py
src/: main.py
src/config/: __init__.py
src/scheduler/: __init__.py
src/services/: thread_service.py
src/utils/: __init__.py
utils/: logger.py
