[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lolz-keeper"
version = "1.0.0"
description = "Automated thread bumping and contest creation for the Lolzteam"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "apscheduler",
    "loguru",
    "pydantic",
    "pydantic-settings",
    "tenacity",
]

[tool.setuptools]
packages = ["config", "models", "scheduler", "services", "utils"]
py-modules = ["main"]
